--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "css:build": "npx tailwindcss -i ./style.css -o ./dist/output.css --watch"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@tsparticles/engine": "^3.0.0",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.10.0",
+    "npm": "^11.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
